# WasmPass

./: .gitignore  README.md  app.js  genpass.wasm  index.html  manifest.webmanifest  policy.html  style.css  sw.js
cpp/: .clang-format  CMakeLists.txt  genpass.cpp
